@@ -1,5 +1,6 @@
 25 June 2008
 
+* Slim down default key bindings: support lowercase only.
 * Handle escaped keys properly (parse eg \033b into a single key code) and
   use this to change copy mode next/previous work to M-f and M-b to match
   emacs.
@@ -566,4 +567,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.141 2008-06-25 19:12:30 nicm Exp $
+$Id: CHANGES,v 1.142 2008-06-25 19:18:20 nicm Exp $
